# tink

./: .bazelversion  .gitignore  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  HACKING.md  README  README.md  WORKSPACE  __init__.py  go.mod  go.sum  index.html  params.json  passing_test.sh  pom.xml  tink_base_deps.bzl  tink_base_deps_init.bzl  tink_version.bzl  tink_version.cmake  tinkey.rb
apps/paymentmethodtoken/: BUILD  BUILD.bazel  README.md
apps/rewardedads/: BUILD  BUILD.bazel  README.md
apps/webpush/: BUILD  BUILD.bazel  README.md
cc/: .bazelignore  .bazelrc  BUILD  BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE  aead.h  aead_config.h  aead_factory.h  aead_key_templates.h  big_integer.h  binary_keyset_reader.h  binary_keyset_writer.h  catalogue.h  chunked_mac.h  cleartext_keyset_handle.h  config.h  configuration.h  crypto_format.h  daead.h  deps.bzl  deterministic_aead.h  deterministic_aead_config.h  deterministic_aead_factory.h  deterministic_aead_key_templates.h  ec_point.h  ecdsa_proto_test.cc  exported_symbols.lds  extensions.bzl  hybrid_config.h  hybrid_decrypt.h  hybrid_decrypt_config.h  hybrid_decrypt_factory.h  hybrid_encrypt.h  hybrid_encrypt_config.h  hybrid_encrypt_factory.h  hybrid_key_templates.h  input_stream.h  insecure_secret_key_access.h  (+57 more)
cc/aead/: BUILD  BUILD.bazel  CMakeLists.txt  aead_catalogue.cc  aead_catalogue.h  aead_catalogue_test.cc  aead_config.cc  aead_config.h  aead_config_test.cc  aead_factory.cc  aead_factory.h  aead_factory_test.cc  aead_key.h  aead_key_templates.cc  aead_key_templates.h  aead_key_templates_test.cc  aead_parameters.h  aead_set_wrapper.cc  aead_set_wrapper.h  aead_set_wrapper_test.cc  aead_wrapper.cc  aead_wrapper.h  aead_wrapper_test.cc  aes_ctr_hmac_aead_key.cc  aes_ctr_hmac_aead_key.h  aes_ctr_hmac_aead_key_manager.cc  aes_ctr_hmac_aead_key_manager.h  aes_ctr_hmac_aead_key_manager_test.cc  aes_ctr_hmac_aead_key_test.cc  aes_ctr_hmac_aead_parameters.cc  aes_ctr_hmac_aead_parameters.h  aes_ctr_hmac_aead_parameters_test.cc  aes_ctr_hmac_aead_proto_serialization.cc  aes_ctr_hmac_aead_proto_serialization.h  aes_ctr_hmac_aead_proto_serialization_test.cc  aes_eax_key.cc  (+78 more)
go/: BUILD  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  mac.go  tink_go_deps.bzl  tink_go_deps_init.bzl  tink_go_gcpkms_repo_WORKSPACE  tink_go_gcpkms_repo_deps.bzl  tink_go_gcpkms_repo_go.mod  tink_go_gcpkms_repo_go.sum  tink_go_repo_deps.bzl  tink_go_repo_go.mod  tink_go_repo_go.sum
java/: .gitignore  BUILD  BUILD.bazel  GenTestRules.bzl  HACKING.md  README.md  WORKSPACE  build.gradle  settings.gradle  tink_java_deps.bzl
java_src/: .bazelignore  BUILD.bazel  WORKSPACE  jar_jar_rules.txt  template_rule.bzl  tink_java_deps.bzl  tink_java_deps_init.bzl  tink_java_gcpkms_BUILD.bazel  tink_java_gcpkms_WORKSPACE  tink_java_gcpkms_deps.bzl
javascript/: BUILD.bazel  JAVASCRIPT-HACKING.md  METADATA  README.md  WORKSPACE  aead.js  binary_keyset_reader.js  binary_keyset_reader_test.js  binary_keyset_writer.js  binary_keyset_writer_test.js  catalogue.js  cleartext_keyset_handle.js  cleartext_keyset_handle_test.js  config.js  config_test.js  crypto_format.js  crypto_format_test.js  error.js  exports.js  hybrid_decrypt.js  hybrid_encrypt.js  hybriddecrypt.js  hybridencrypt.js  index.ts  key_manager.js  keymanager.js  keyset_handle.js  keyset_handle.ts  keyset_handle_legacy.js  keyset_handle_test.js  keyset_reader.js  keyset_writer.js  mac.js  no_secret_keyset_handle.js  no_secret_keyset_handle_test.js  package.json  primitive_set.js  primitive_set_test.js  primitive_wrapper.js  proto_test.js  (+9 more)
maven/: BUILD.bazel  README.md  apps-paymentmethodtoken.pom.xml  apps-rewardedads.pom.xml  apps-webpush.pom.xml  build.sh  execute-deploy.sh  execute_deploy.sh  maven_deploy_library.sh  maven_deploy_library_test.sh  pom.xml  publish-snapshot.sh  publish-to-maven-central.sh  publish_snapshot.sh  publish_to_maven_central.sh  settings.xml  test-snapshot.sh  test_snapshot.sh  tink-android.pom.xml  tink-awskms.pom.xml  tink-gcpkms.pom.xml  tink.pom.xml
objc/: .bazelrc  .clang-format  BUILD  BUILD.bazel  CHANGELOG  README.md  TINKAead.h  TINKAead.mm  TINKAeadConfig.h  TINKAeadFactory.h  TINKAeadKeyTemplate.h  TINKAeadKeyTemplates.h  TINKAead_Internal.h  TINKAllConfig.h  TINKBinaryKeysetReader.h  TINKConfig.h  TINKDeterministicAead.h  TINKDeterministicAeadConfig.h  TINKDeterministicAeadFactory.h  TINKDeterministicAeadInternal.h  TINKDeterministicAeadKeyTemplate.h  TINKHybridConfig.h  TINKHybridDecrypt.h  TINKHybridDecryptConfig.h  TINKHybridDecryptFactory.h  TINKHybridEncrypt.h  TINKHybridEncryptConfig.h  TINKHybridEncryptFactory.h  TINKHybridKeyTemplate.h  TINKJSONKeysetReader.h  TINKKeyManager.h  TINKKeyTemplate.h  TINKKeysetHandle+Cleartext.h  TINKKeysetHandle+NoSecret.h  TINKKeysetHandle.h  TINKKeysetReader.h  TINKMac.h  TINKMacConfig.h  TINKMacFactory.h  TINKMacKeyTemplate.h  (+12 more)
proto/: BUILD  BUILD.bazel  CMakeLists.txt  README.md  aes_cmac.proto  aes_cmac_prf.proto  aes_ctr.proto  aes_ctr_hmac_aead.proto  aes_ctr_hmac_streaming.proto  aes_eax.proto  aes_gcm.proto  aes_gcm_hkdf_streaming.proto  aes_gcm_siv.proto  aes_siv.proto  cached_dek_envelope.proto  chacha20_poly1305.proto  common.proto  config.proto  ecdsa.proto  ecies.proto  ecies_aead_hkdf.proto  ed25519.proto  empty.proto  gcp_kms.proto  gen.go  googlecloudkms.proto  hkdf_prf.proto  hmac.proto  hmac_prf.proto  hpke.proto  jws_hmac.proto  jwt_ecdsa.proto  jwt_hmac.proto  jwt_rsa_ssa_pkcs1.proto  jwt_rsa_ssa_pss.proto  k2.proto  kms_aead.proto  kms_envelope.proto  objc.bzl  portable_tink_filter_lite.asciipb  (+11 more)
testdata/: BUILD  BUILD.bazel  README.md  README_AWS.txt  aes_gcm_test.json  aws_credentials_cc.txt  bad_gcp_key_name.txt  credential.json  credentials_aws.csv  ecdsa_test.json
tools/: BUILD  BUILD.bazel  WORKSPACE  common.bzl  coverage.sh  gen_java_test_rules.bzl  gen_maven_jar_rules.bzl  get_android_test_size.bzl  go.mod  go.sum  jarjar.bzl  jarjar_library_impl.sh  java_single_jar.bzl  javadoc.bzl  merge_all_rules.txt  objc.bzl  release_tinkey.sh
(+13468 files in other folders)
