# Description:
#   Tink (https://github.com/google/tink) is a small crypto library that
#   provides a safe, simple, agile and fast way to accomplish some common
#   crypto tasks.
package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

exports_files([
    "LICENSE",
    "README.md",
    "__init__.py",
])

filegroup(
    name = "tink_version",
    srcs = ["tink_version.bzl"],
    visibility = ["//visibility:public"],
)
